syntax = "proto3";

package protos;
option go_package = "github.com/levikobi/face-recognizer/grpc-schemas/golang/face-recognition-service";

service FaceRecognition {
  rpc AddPerson(AddPersonRequest) returns (AddPersonResponse) {};
  rpc FindPerson(FindPersonRequest) returns (FindPersonResponse) {};
}

message AddPersonRequest {
  Person person = 1;
}

message AddPersonResponse {
  enum Status {
    UNKNOWN = 0;
    SUCCESS = 1;
    FAILURE = 2;
  }
  Status status = 1;
}

message FindPersonRequest {
  repeated double features = 1;
}

message FindPersonResponse {
  repeated Person persons = 1;
}

message Person {
  repeated double features = 1;
  string name = 2;
}